--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - "v1-dependencies-{{ checksum \"requirements.txt\" }}"
+            - v1-dependencies-{{ checksum "requirements.txt" }}
             - v1-dependencies-
       - run:
           command: |
@@ -22,14 +22,15 @@ jobs:
               # Install hadolint
               wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 &&\
               chmod +x /bin/hadolint
+              
           name: "install dependencies"
       - save_cache:
           paths:
             - ./venv
-          key: v1-dependencies-{{ checksum \"requirements.txt\" }}
+          key: v1-dependencies-{{ checksum "requirements.txt" }}
       # run lint!
       - run:
           name: run lint
           command: |
             . venv/bin/activate
-            make lint
+            hadolint Dockerfile
